--- a/_notebooks/DZ/GenMapFindTwins.ipynb
+++ b/_notebooks/DZ/GenMapFindTwins.ipynb
@@ -13,9 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "39856068",
    "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
@@ -23,64 +26,70 @@
    "outputs": [],
    "source": [
     "using System;\n",
-    "using System.Collections.Generic;\n",
-    "using System.Linq;\n",
+    "using System.Collections.Generic; // Для использования List<T>\n",
+    "using System.Linq; // Для использования методов LINQ, таких как OrderBy\n",
     "\n",
+    "// Генерирует карту для игры \"Найди пару\".\n",
     "char[,] GenerateFindTwinsMap(\n",
-    "    int height = 4,\n",
-    "    int width = 4,\n",
-    "    string symbols = \"0123456789\",\n",
-    "    int repeatCount = 2)\n",
+    "    int height = 4,                 // Высота игрового поля по умолчанию\n",
+    "    int width = 4,                  // Ширина игрового поля по умолчанию\n",
+    "    string symbols = \"0123456789\",  // Строка с доступными символами для пар\n",
+    "    int repeatCount = 2)            // Количество повторений каждого символа (2 для пар, 3 для троек и т.д.)\n",
     "{\n",
-    "    int totalCells = height * width;\n",
+    "    int totalCells = height * width; // Общее количество ячеек на карте\n",
     "\n",
+    "    // Проверка: общее количество ячеек должно быть кратно количеству повторений,\n",
+    "    // чтобы все символы могли быть размещены полностью.\n",
     "    if (totalCells % repeatCount != 0)\n",
-    "        throw new ArgumentException(\"Количество ячеек должно делиться на repeatCount.\");\n",
+    "        throw new ArgumentException(\"Количество ячеек должно быть кратно 'repeatCount', чтобы сформировать полные наборы символов.\");\n",
     "\n",
+    "    // Сколько уникальных символов потребуется для заполнения карты.\n",
     "    int totalUniqueSymbolsNeeded = totalCells / repeatCount;\n",
     "\n",
+    "    // Проверка: достаточно ли предоставлено уникальных символов.\n",
     "    if (symbols.Length < totalUniqueSymbolsNeeded)\n",
-    "        throw new ArgumentException(\"Недостаточно символов для генерации уникальных пар.\");\n",
+    "        throw new ArgumentException(\"Недостаточно уникальных символов в строке 'symbols' для генерации карты.\");\n",
     "\n",
-    "    // 1. Подготовка пула символов\n",
+    "    // 1. Подготовка списка символов для размещения на карте (пул символов)\n",
     "    List<char> pool = new List<char>();\n",
-    "    for (int i = 0; i < totalUniqueSymbolsNeeded; i++)\n",
+    "    for (int i = 0; i < totalUniqueSymbolsNeeded; i++) // Берем нужное количество уникальных символов из 'symbols'\n",
     "    {\n",
-    "        for (int j = 0; j < repeatCount; j++)\n",
+    "        for (int j = 0; j < repeatCount; j++) // Каждый уникальный символ добавляем 'repeatCount' раз\n",
     "        {\n",
     "            pool.Add(symbols[i]);\n",
     "        }\n",
     "    }\n",
     "\n",
-    "    // 2. Перемешиваем\n",
+    "    // 2. Перемешиваем созданный пул символов в случайном порядке\n",
     "    Random rnd = new Random();\n",
-    "    pool = pool.OrderBy(_ => rnd.Next()).ToList();\n",
+    "    pool = pool.OrderBy(_ => rnd.Next()).ToList(); // Простой способ перемешать список с помощью LINQ\n",
     "\n",
-    "    // 3. Заполняем карту\n",
-    "    char[,] map = new char[height, width];\n",
-    "    int index = 0;\n",
-    "    for (int i = 0; i < height; i++)\n",
+    "    // 3. Заполняем карту (двумерный массив) перемешанными символами\n",
+    "    char[,] map = new char[height, width]; // Создаем карту заданных размеров\n",
+    "    int index = 0; // Индекс для поочередного взятия символов из перемешанного пула\n",
+    "    for (int i = 0; i < height; i++) // Проход по строкам карты\n",
     "    {\n",
-    "        for (int j = 0; j < width; j++)\n",
+    "        for (int j = 0; j < width; j++) // Проход по столбцам карты\n",
     "        {\n",
-    "            map[i, j] = pool[index++];\n",
+    "            map[i, j] = pool[index++]; // Размещаем очередной символ из пула в ячейку карты\n",
     "        }\n",
     "    }\n",
     "\n",
-    "    return map;\n",
+    "    return map; // Возвращаем сгенерированную и заполненную карту\n",
     "}\n",
     "\n",
+    "// Выводит сгенерированную карту в консоль.\n",
     "void PrintMap(char[,] map)\n",
     "{\n",
-    "    for (int i = 0; i < map.GetLength(0); i++)\n",
+    "    for (int i = 0; i < map.GetLength(0); i++) // Проход по строкам карты (первое измерение массива)\n",
     "    {\n",
-    "        for (int j = 0; j < map.GetLength(1); j++)\n",
+    "        for (int j = 0; j < map.GetLength(1); j++) // Проход по столбцам карты (второе измерение массива)\n",
     "        {\n",
-    "            Console.Write(map[i, j] + \" \");\n",
+    "            Console.Write(map[i, j] + \" \"); // Выводим символ и пробел для разделения\n",
     "        }\n",
-    "        Console.WriteLine();\n",
+    "        Console.WriteLine(); // Переход на новую строку после вывода всех символов строки\n",
     "    }\n",
-    "}\n"
+    "}"
    ]
   },
   {
@@ -88,6 +97,9 @@
    "execution_count": 6,
    "id": "c55e6989",
    "metadata": {
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
     "vscode": {
      "languageId": "polyglot-notebook"
     }
