--- a/_notebooks/polyglot1.ipynb
+++ b/_notebooks/polyglot1.ipynb
@@ -1,5 +1,33 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "Console.WriteLine(\"Hello!\");"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": ".NET (C#)",
